--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,13 @@ spring.profiles: local
 spring:
   datasource:
     url: jdbc:h2:mem:DEMO
-    username:
-    password: sa
+    username: sa
+    password:
   jpa:
     properties.hibernate.dialect: org.hibernate.dialect.H2Dialect
+  h2:
+    console.enabled: true
+    console.path: /h2-console
 ---
 spring.profiles: cloud
 spring:
