--- a/manifest.yml
+++ b/manifest.yml
@@ -5,7 +5,7 @@ applications:
   instances: 1
   path:  target/easy-notes-1.0.0.jar
   env:
-    SPRING_PROFILES_ACTIVE: cloud
+    SPRING_PROFILES_ACTIVE: cloudfoundry
     # SPRING_DATASOURCE_DRIVERCLASSNAME: com.mysql.jdbc.Driver
     # SPRING_DATASOURCE_URL: ${vcap.services.cleardb.credentials.jdbcUrl}
     # SPRING_DATASOURCE_USERNAME: ${vcap.services.cleardb.credentials.username}
