--- a/openshift/spring-boot-db-notes.yml
+++ b/openshift/spring-boot-db-notes.yml
@@ -77,7 +77,7 @@ objects:
                 apiVersion: v1
                 fieldPath: metadata.namespace
           - name: SPRING_PROFILES_ACTIVE
-            value: local
+            value: openshift
           image: spring-boot-db-notes:latest
           imagePullPolicy: IfNotPresent
           name: spring-boot
