--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,8 +31,8 @@ spring:
 spring.profiles: openshift
 spring:
   datasource:
-    url: jdbc:mysql:mysql:3306/${mysql_database.database}
-    username: ${mysql_database.user}
-    password: ${mysql_database.password}
+    url: jdbc:mysql://${db.host}:3306/${db.name}
+    username: ${db.user}
+    password: ${db.password}
   jpa:
     properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
