Be more verbose

--- a/openshift/mysql-secret_servicebinding.yml
+++ b/openshift/mysql-secret_servicebinding.yml
@@ -1,3 +1,5 @@
+# Access credentials of the MySQL ServiceInstance.
+# Upon creation, the Service Catalog controller will create a Kubernetes Secret containing connection details and credentials for the Service Instance, which can be mounted into Pods.
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ServiceBinding
 metadata:
