--- a/openshift/mysql_serviceinstance.yml
+++ b/openshift/mysql_serviceinstance.yml
@@ -1,3 +1,4 @@
+# A provisioned instance of the MySQL ClusterServiceClass
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ServiceInstance
 metadata:
